{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 14,
  "lineage": "1316c145-1dbd-8074-3f27-4da2c92683db",
  "resources": [
    {
      "module": "module.internet_dev_firewall",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "firewall_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].internet-dev",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/1a8902f8-8e21-4271-8ce5-020bb4a44a8f/resourceGroups/internet-dev-rg/providers/Microsoft.Network/publicIPAddresses/fw-untrusted-dev-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.4.57.66",
            "ip_version": "IPv4",
            "location": "israelcentral",
            "name": "fw-untrusted-dev-pip",
            "resource_group_name": "internet-dev-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "env": "dev"
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "dependencies": [
            "module.internet_dev_hub.azurerm_route_table.this",
            "module.internet_dev_hub.azurerm_subnet.this",
            "module.internet_dev_hub.azurerm_subnet_route_table_association.this",
            "module.internet_dev_hub.azurerm_virtual_network.this",
            "module.internet_dev_hub.azurerm_virtual_network_dns_servers.this",
            "module.internet_dev_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.internet_dev_hub",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].internet-dev",
      "instances": [
        {
          "index_key": "udr-internet-dev",
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/1a8902f8-8e21-4271-8ce5-020bb4a44a8f/resourceGroups/internet-dev-rg/providers/Microsoft.Network/routeTables/udr-internet-dev",
            "location": "israelcentral",
            "name": "udr-internet-dev",
            "resource_group_name": "internet-dev-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default-route",
                "next_hop_in_ip_address": "1.1.1.1",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/1a8902f8-8e21-4271-8ce5-020bb4a44a8f/resourceGroups/internet-dev-rg/providers/Microsoft.Network/virtualNetworks/internet-dev-hub/subnets/palo"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_dev_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.internet_dev_hub",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].internet-dev",
      "instances": [
        {
          "index_key": "palo",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.112.0.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/1a8902f8-8e21-4271-8ce5-020bb4a44a8f/resourceGroups/internet-dev-rg/providers/Microsoft.Network/virtualNetworks/internet-dev-hub/subnets/palo",
            "name": "palo",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "internet-dev-rg",
            "virtual_network_name": "internet-dev-hub"
          },
          "dependencies": [
            "module.internet_dev_hub.azurerm_virtual_network.this",
            "module.internet_dev_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.internet_dev_hub",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].internet-dev",
      "instances": [
        {
          "index_key": "palo",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1a8902f8-8e21-4271-8ce5-020bb4a44a8f/resourceGroups/internet-dev-rg/providers/Microsoft.Network/virtualNetworks/internet-dev-hub/subnets/palo",
            "route_table_id": "/subscriptions/1a8902f8-8e21-4271-8ce5-020bb4a44a8f/resourceGroups/internet-dev-rg/providers/Microsoft.Network/routeTables/udr-internet-dev",
            "subnet_id": "/subscriptions/1a8902f8-8e21-4271-8ce5-020bb4a44a8f/resourceGroups/internet-dev-rg/providers/Microsoft.Network/virtualNetworks/internet-dev-hub/subnets/palo"
          },
          "dependencies": [
            "module.internet_dev_hub.azurerm_route_table.this",
            "module.internet_dev_hub.azurerm_subnet.this",
            "module.internet_dev_hub.azurerm_virtual_network.this",
            "module.internet_dev_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.internet_dev_hub",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].internet-dev",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.112.0.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "916347c6-bef2-4437-b301-3a8bd94659b5",
            "id": "/subscriptions/1a8902f8-8e21-4271-8ce5-020bb4a44a8f/resourceGroups/internet-dev-rg/providers/Microsoft.Network/virtualNetworks/internet-dev-hub",
            "location": "israelcentral",
            "name": "internet-dev-hub",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "internet-dev-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.112.0.0/27"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/1a8902f8-8e21-4271-8ce5-020bb4a44a8f/resourceGroups/internet-dev-rg/providers/Microsoft.Network/virtualNetworks/internet-dev-hub/subnets/palo",
                "name": "palo",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/1a8902f8-8e21-4271-8ce5-020bb4a44a8f/resourceGroups/internet-dev-rg/providers/Microsoft.Network/routeTables/udr-internet-dev"
              },
              {
                "address_prefixes": [
                  "10.112.0.64/26"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/1a8902f8-8e21-4271-8ce5-020bb4a44a8f/resourceGroups/internet-dev-rg/providers/Microsoft.Network/virtualNetworks/internet-dev-hub/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "module.internet_dev_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.internet_dev_hub",
      "mode": "managed",
      "type": "azurerm_virtual_network_dns_servers",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].internet-dev"
    },
    {
      "module": "module.internet_prd_firewall",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "firewall_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].internet-prd",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/31fe8e06-29f3-4c68-9d59-26a09871756c/resourceGroups/internet-prd-rg/providers/Microsoft.Network/publicIPAddresses/fw-untrusted-dev-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.217.177.12",
            "ip_version": "IPv4",
            "location": "israelcentral",
            "name": "fw-untrusted-dev-pip",
            "resource_group_name": "internet-prd-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "env": "prd"
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "dependencies": [
            "module.internet_prd_hub.azurerm_route_table.this",
            "module.internet_prd_hub.azurerm_subnet.this",
            "module.internet_prd_hub.azurerm_subnet_route_table_association.this",
            "module.internet_prd_hub.azurerm_virtual_network.this",
            "module.internet_prd_hub.azurerm_virtual_network_dns_servers.this",
            "module.internet_prd_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.internet_prd_hub",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].internet-prd",
      "instances": [
        {
          "index_key": "udr-internet-prd",
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/31fe8e06-29f3-4c68-9d59-26a09871756c/resourceGroups/internet-prd-rg/providers/Microsoft.Network/routeTables/udr-internet-prd",
            "location": "israelcentral",
            "name": "udr-internet-prd",
            "resource_group_name": "internet-prd-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default-route",
                "next_hop_in_ip_address": "1.1.1.1",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/31fe8e06-29f3-4c68-9d59-26a09871756c/resourceGroups/internet-prd-rg/providers/Microsoft.Network/virtualNetworks/internet-prd-hub/subnets/default"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_prd_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.internet_prd_hub",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].internet-prd",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.112.4.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/31fe8e06-29f3-4c68-9d59-26a09871756c/resourceGroups/internet-prd-rg/providers/Microsoft.Network/virtualNetworks/internet-prd-hub/subnets/default",
            "name": "default",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "internet-prd-rg",
            "virtual_network_name": "internet-prd-hub"
          },
          "dependencies": [
            "module.internet_prd_hub.azurerm_virtual_network.this",
            "module.internet_prd_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.internet_prd_hub",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].internet-prd",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/31fe8e06-29f3-4c68-9d59-26a09871756c/resourceGroups/internet-prd-rg/providers/Microsoft.Network/virtualNetworks/internet-prd-hub/subnets/default",
            "route_table_id": "/subscriptions/31fe8e06-29f3-4c68-9d59-26a09871756c/resourceGroups/internet-prd-rg/providers/Microsoft.Network/routeTables/udr-internet-prd",
            "subnet_id": "/subscriptions/31fe8e06-29f3-4c68-9d59-26a09871756c/resourceGroups/internet-prd-rg/providers/Microsoft.Network/virtualNetworks/internet-prd-hub/subnets/default"
          },
          "dependencies": [
            "module.internet_prd_hub.azurerm_route_table.this",
            "module.internet_prd_hub.azurerm_subnet.this",
            "module.internet_prd_hub.azurerm_virtual_network.this",
            "module.internet_prd_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.internet_prd_hub",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].internet-prd",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.112.4.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "14ae1d5d-85bb-4b6d-a17d-d2854c157d14",
            "id": "/subscriptions/31fe8e06-29f3-4c68-9d59-26a09871756c/resourceGroups/internet-prd-rg/providers/Microsoft.Network/virtualNetworks/internet-prd-hub",
            "location": "israelcentral",
            "name": "internet-prd-hub",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "internet-prd-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.112.4.0/27"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/31fe8e06-29f3-4c68-9d59-26a09871756c/resourceGroups/internet-prd-rg/providers/Microsoft.Network/virtualNetworks/internet-prd-hub/subnets/default",
                "name": "default",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/31fe8e06-29f3-4c68-9d59-26a09871756c/resourceGroups/internet-prd-rg/providers/Microsoft.Network/routeTables/udr-internet-prd"
              },
              {
                "address_prefixes": [
                  "10.112.4.64/26"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/31fe8e06-29f3-4c68-9d59-26a09871756c/resourceGroups/internet-prd-rg/providers/Microsoft.Network/virtualNetworks/internet-prd-hub/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "module.internet_prd_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.internet_prd_hub",
      "mode": "managed",
      "type": "azurerm_virtual_network_dns_servers",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].internet-prd"
    },
    {
      "module": "module.mgmt_hub",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].mgmt",
      "instances": [
        {
          "index_key": "udr-mgmt",
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/c19f8708-9a89-4e4a-b5c2-d17b6cd680ca/resourceGroups/mgmt-rg/providers/Microsoft.Network/routeTables/udr-mgmt",
            "location": "israelcentral",
            "name": "udr-mgmt",
            "resource_group_name": "mgmt-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default-route",
                "next_hop_in_ip_address": "1.1.1.1",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mgmt_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.mgmt_hub",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].mgmt",
      "instances": [
        {
          "index_key": "GatewaySubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.112.4.0/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/c19f8708-9a89-4e4a-b5c2-d17b6cd680ca/resourceGroups/mgmt-rg/providers/Microsoft.Network/virtualNetworks/mgmt-hub/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "mgmt-rg",
            "virtual_network_name": "mgmt-hub"
          },
          "dependencies": [
            "module.mgmt_hub.azurerm_virtual_network.this",
            "module.mgmt_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.mgmt_hub",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].mgmt"
    },
    {
      "module": "module.mgmt_hub",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].mgmt",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.112.4.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7d932545-e6cd-4879-8dcc-c9afa8113f05",
            "id": "/subscriptions/c19f8708-9a89-4e4a-b5c2-d17b6cd680ca/resourceGroups/mgmt-rg/providers/Microsoft.Network/virtualNetworks/mgmt-hub",
            "location": "israelcentral",
            "name": "mgmt-hub",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "mgmt-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.112.4.0/28"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/c19f8708-9a89-4e4a-b5c2-d17b6cd680ca/resourceGroups/mgmt-rg/providers/Microsoft.Network/virtualNetworks/mgmt-hub/subnets/GatewaySubnet",
                "name": "GatewaySubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "module.mgmt_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.mgmt_hub",
      "mode": "managed",
      "type": "azurerm_virtual_network_dns_servers",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].mgmt"
    },
    {
      "module": "module.on_prem_hub",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].on-prem",
      "instances": [
        {
          "index_key": "udr-on-prem",
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/543679a6-be51-49af-b53f-066e097a7db9/resourceGroups/on-prem-rg/providers/Microsoft.Network/routeTables/udr-on-prem",
            "location": "israelcentral",
            "name": "udr-on-prem",
            "resource_group_name": "on-prem-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default-route",
                "next_hop_in_ip_address": "1.1.1.1",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.on_prem_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.on_prem_hub",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].on-prem"
    },
    {
      "module": "module.on_prem_hub",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].on-prem"
    },
    {
      "module": "module.on_prem_hub",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].on-prem",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.112.3.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1b9be45b-a9e5-4fcc-bde8-96ea6a3b9d7d",
            "id": "/subscriptions/543679a6-be51-49af-b53f-066e097a7db9/resourceGroups/on-prem-rg/providers/Microsoft.Network/virtualNetworks/on-prem-hub",
            "location": "israelcentral",
            "name": "on-prem-hub",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "on-prem-rg"
          },
          "dependencies": [
            "module.on_prem_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.on_prem_hub",
      "mode": "managed",
      "type": "azurerm_virtual_network_dns_servers",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].on-prem"
    },
    {
      "module": "module.trusted_dev_firewall",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "firewall_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].trusted-dev",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/1abb0b17-78ad-47ee-b89c-4f1f61abd2f6/resourceGroups/trusted-dev-rg/providers/Microsoft.Network/publicIPAddresses/fw-trusted-dev-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.4.64.250",
            "ip_version": "IPv4",
            "location": "israelcentral",
            "name": "fw-trusted-dev-pip",
            "resource_group_name": "trusted-dev-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "env": "dev"
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "dependencies": [
            "module.trusted_dev_hub.azurerm_route_table.this",
            "module.trusted_dev_hub.azurerm_subnet.this",
            "module.trusted_dev_hub.azurerm_subnet_route_table_association.this",
            "module.trusted_dev_hub.azurerm_virtual_network.this",
            "module.trusted_dev_hub.azurerm_virtual_network_dns_servers.this",
            "module.trusted_dev_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_dev_firewall",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "firewall_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].trusted-dev",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.112.1.0/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/1abb0b17-78ad-47ee-b89c-4f1f61abd2f6/resourceGroups/trusted-dev-rg/providers/Microsoft.Network/virtualNetworks/trusted-dev-hub/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "trusted-dev-rg",
            "virtual_network_name": "trusted-dev-hub"
          },
          "dependencies": [
            "module.trusted_dev_hub.azurerm_route_table.this",
            "module.trusted_dev_hub.azurerm_subnet.this",
            "module.trusted_dev_hub.azurerm_subnet_route_table_association.this",
            "module.trusted_dev_hub.azurerm_virtual_network.this",
            "module.trusted_dev_hub.azurerm_virtual_network_dns_servers.this",
            "module.trusted_dev_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_dev_hub",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].trusted-dev",
      "instances": [
        {
          "index_key": "udr-trusted-dev",
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/1abb0b17-78ad-47ee-b89c-4f1f61abd2f6/resourceGroups/trusted-dev-rg/providers/Microsoft.Network/routeTables/udr-trusted-dev",
            "location": "israelcentral",
            "name": "udr-trusted-dev",
            "resource_group_name": "trusted-dev-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default-route",
                "next_hop_in_ip_address": "1.1.1.1",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.trusted_dev_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_dev_hub",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].trusted-dev"
    },
    {
      "module": "module.trusted_dev_hub",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].trusted-dev"
    },
    {
      "module": "module.trusted_dev_hub",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].trusted-dev",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.112.1.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b22e4c87-e356-4d25-b7d8-fa20257c64f7",
            "id": "/subscriptions/1abb0b17-78ad-47ee-b89c-4f1f61abd2f6/resourceGroups/trusted-dev-rg/providers/Microsoft.Network/virtualNetworks/trusted-dev-hub",
            "location": "israelcentral",
            "name": "trusted-dev-hub",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "trusted-dev-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.112.1.0/26"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/1abb0b17-78ad-47ee-b89c-4f1f61abd2f6/resourceGroups/trusted-dev-rg/providers/Microsoft.Network/virtualNetworks/trusted-dev-hub/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "module.trusted_dev_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_dev_hub",
      "mode": "managed",
      "type": "azurerm_virtual_network_dns_servers",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].trusted-dev"
    },
    {
      "module": "module.untrusted_dev_firewall",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "firewall_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].untrusted-dev",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/8252beae-a781-4b0f-9264-c84dc296b270/resourceGroups/untrusted-dev-rg/providers/Microsoft.Network/publicIPAddresses/fw-untrusted-dev-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.4.57.162",
            "ip_version": "IPv4",
            "location": "israelcentral",
            "name": "fw-untrusted-dev-pip",
            "resource_group_name": "untrusted-dev-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "env": "dev"
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "dependencies": [
            "module.untrusted_dev_hub.azurerm_route_table.this",
            "module.untrusted_dev_hub.azurerm_subnet.this",
            "module.untrusted_dev_hub.azurerm_subnet_route_table_association.this",
            "module.untrusted_dev_hub.azurerm_virtual_network.this",
            "module.untrusted_dev_hub.azurerm_virtual_network_dns_servers.this",
            "module.untrusted_dev_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_dev_firewall",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "firewall_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].untrusted-dev",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.112.2.0/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8252beae-a781-4b0f-9264-c84dc296b270/resourceGroups/untrusted-dev-rg/providers/Microsoft.Network/virtualNetworks/untrusted-dev-hub/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "untrusted-dev-rg",
            "virtual_network_name": "untrusted-dev-hub"
          },
          "dependencies": [
            "module.untrusted_dev_hub.azurerm_route_table.this",
            "module.untrusted_dev_hub.azurerm_subnet.this",
            "module.untrusted_dev_hub.azurerm_subnet_route_table_association.this",
            "module.untrusted_dev_hub.azurerm_virtual_network.this",
            "module.untrusted_dev_hub.azurerm_virtual_network_dns_servers.this",
            "module.untrusted_dev_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_dev_hub",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].untrusted-dev",
      "instances": [
        {
          "index_key": "udr-untrusted-dev",
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/8252beae-a781-4b0f-9264-c84dc296b270/resourceGroups/untrusted-dev-rg/providers/Microsoft.Network/routeTables/udr-untrusted-dev",
            "location": "israelcentral",
            "name": "udr-untrusted-dev",
            "resource_group_name": "untrusted-dev-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default-route",
                "next_hop_in_ip_address": "1.1.1.1",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.untrusted_dev_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_dev_hub",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].untrusted-dev"
    },
    {
      "module": "module.untrusted_dev_hub",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].untrusted-dev"
    },
    {
      "module": "module.untrusted_dev_hub",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].untrusted-dev",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.112.2.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d4a5bcb9-b0f1-49f7-9eca-4c5db1876a63",
            "id": "/subscriptions/8252beae-a781-4b0f-9264-c84dc296b270/resourceGroups/untrusted-dev-rg/providers/Microsoft.Network/virtualNetworks/untrusted-dev-hub",
            "location": "israelcentral",
            "name": "untrusted-dev-hub",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "untrusted-dev-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.112.2.0/26"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/8252beae-a781-4b0f-9264-c84dc296b270/resourceGroups/untrusted-dev-rg/providers/Microsoft.Network/virtualNetworks/untrusted-dev-hub/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "module.untrusted_dev_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_dev_hub",
      "mode": "managed",
      "type": "azurerm_virtual_network_dns_servers",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].untrusted-dev"
    },
    {
      "module": "module.untrusted_dev_internet_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "one_way",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].untrusted-dev",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/8252beae-a781-4b0f-9264-c84dc296b270/resourceGroups/untrusted-dev-rg/providers/Microsoft.Network/virtualNetworks/untrusted-dev-hub/virtualNetworkPeerings/untrusted-dev-hub-to-internet",
            "name": "untrusted-dev-hub-to-internet",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/1a8902f8-8e21-4271-8ce5-020bb4a44a8f/resourceGroups/internet-dev-rg/providers/Microsoft.Network/virtualNetworks/internet-dev-hub",
            "resource_group_name": "untrusted-dev-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "untrusted-dev-hub"
          },
          "dependencies": [
            "module.internet_dev_hub.azurerm_route_table.this",
            "module.internet_dev_hub.azurerm_subnet.this",
            "module.internet_dev_hub.azurerm_subnet_route_table_association.this",
            "module.internet_dev_hub.azurerm_virtual_network.this",
            "module.internet_dev_hub.azurerm_virtual_network_dns_servers.this",
            "module.internet_dev_rg.azurerm_resource_group.rg",
            "module.untrusted_dev_hub.azurerm_route_table.this",
            "module.untrusted_dev_hub.azurerm_subnet.this",
            "module.untrusted_dev_hub.azurerm_subnet_route_table_association.this",
            "module.untrusted_dev_hub.azurerm_virtual_network.this",
            "module.untrusted_dev_hub.azurerm_virtual_network_dns_servers.this",
            "module.untrusted_dev_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_dev_internet_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "two_way",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].internet-dev",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/1a8902f8-8e21-4271-8ce5-020bb4a44a8f/resourceGroups/internet-dev-rg/providers/Microsoft.Network/virtualNetworks/internet-dev-hub/virtualNetworkPeerings/internet-to-untrusted-dev-hub",
            "name": "internet-to-untrusted-dev-hub",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/8252beae-a781-4b0f-9264-c84dc296b270/resourceGroups/untrusted-dev-rg/providers/Microsoft.Network/virtualNetworks/untrusted-dev-hub",
            "resource_group_name": "internet-dev-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "internet-dev-hub"
          },
          "dependencies": [
            "module.internet_dev_hub.azurerm_route_table.this",
            "module.internet_dev_hub.azurerm_subnet.this",
            "module.internet_dev_hub.azurerm_subnet_route_table_association.this",
            "module.internet_dev_hub.azurerm_virtual_network.this",
            "module.internet_dev_hub.azurerm_virtual_network_dns_servers.this",
            "module.internet_dev_rg.azurerm_resource_group.rg",
            "module.untrusted_dev_hub.azurerm_route_table.this",
            "module.untrusted_dev_hub.azurerm_subnet.this",
            "module.untrusted_dev_hub.azurerm_subnet_route_table_association.this",
            "module.untrusted_dev_hub.azurerm_virtual_network.this",
            "module.untrusted_dev_hub.azurerm_virtual_network_dns_servers.this",
            "module.untrusted_dev_rg.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}